#78394 fix the overlap text

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_resourceplanner.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_resourceplanner.scss
@@ -492,3 +492,7 @@ card-panel-content {
 	display: none;
 	// background-color: pink;
 }
+
+.manage-schedule-period-picker wfm-date-range-picker{
+  z-index: 40;
+}
